--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,5 +115,7 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/flip_learn_icon.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  adaptive_icon_foreground: "assets/images/flip_learn_icon.png" # Maybe it works because of this
+  adaptive_icon_background: "#FFFFFF" # Maybe it works because of this
+  min_sdk_android: 23 # android min sdk min:16, default 21
   remove_alpha_ios: true
